# marin-dna-post-202606

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
data/: data_mixture_history.csv  data_mixture_results.csv  model_leaderboard.csv  parameter_scaling_history.csv  parameter_scaling_results.csv  transfer_validation_results.csv
docs/: notes.md  outline.md
docs/notes/: notes.md  variant-prioritization-models-vs-evo2.md
docs/references/: causal-glm-models.md  training-flops-vs-evo2.md
figures/: figure3_loss_scaling.txt
figures/appendix/: cooldown_effects.csv  cooldown_effects.md
post/: index.html
post/css/: style.css
site/: README.md  build.py  oa_build.py
site/content/: config.yaml
site/templates/: _citation.html  base.html  blog_post.html
src/: data.py  figures.py
src/appendix/: continuation_mix_shift.py  loss_vs_traitgym_correlation.py  loss_vs_traitgym_curves.py  pooled_vs_unpooled.py  region_loss_scaling.py
src/figures/: __init__.py  __main__.py  data.py  figure10_lineage_vep_trajectory.py  figure11_leaderboard_heatmap.py  figure1_lr_transfer.py  figure2_beta2_epsilon_transfer.py  figure3_region_hyper_transfer.py  figure4_loss_scaling.py  figure5_params_vs_vep_auprc.py  figure6_loss_vs_vep_auprc.py  figure7_loss_vs_traitgym_curves.py  figure7_upstream_mix_auprc.py  figure8_leaderboard_heatmap.py  figure8_loss_vs_traitgym_correlation.py  figure9_lineage_vep_trajectory.py  figure9_upstream_mix_auprc.py  mixture_lineage.py
src/utils/: eval_history.py  figure_style.py  figure_theme.py  pchip_interp.py  savefig.py  sweep_panel.py
(+11 files in other folders)
